--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -16,5 +16,5 @@ spring:
         highlight_sql: true
         use_sql_comments: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
